# intent-router

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  intent_table_from_updated_screenshot.csv  pack_command.txt  pyproject.toml
backend/contracts/intent-registry/: README.md  pyproject.toml
backend/contracts/intent-registry/src/intent_registry_contracts/: __init__.py  models.py
backend/services/admin-service/: README.md  pyproject.toml
backend/services/admin-service/src/admin_service/: settings.py
backend/services/admin-service/src/admin_service/api/: __init__.py  app.py  dependencies.py  schemas.py
backend/services/admin-service/src/admin_service/api/routes/: __init__.py  fields.py  intents.py  perf_tests.py
backend/services/admin-service/src/admin_service/models/: __init__.py  intent.py
backend/services/admin-service/src/admin_service/perf/: case_catalog.py  models.py  registry.py  service.py
backend/services/admin-service/src/admin_service/perf/cases/: default_cases.json
backend/services/admin-service/src/admin_service/storage/: __init__.py  field_repository.py  in_memory_field_repository.py  in_memory_intent_repository.py  intent_repository.py  sql_field_repository.py  sql_intent_repository.py
backend/services/agents/credit-card-repayment-agent/: pyproject.toml
backend/services/agents/credit-card-repayment-agent/src/credit_card_repayment_agent/: __init__.py  app.py  service.py  support.py
backend/services/fake-llm-service/: pyproject.toml
backend/services/fake-llm-service/src/fake_llm_service/api/: __init__.py  app.py
backend/services/router-service/: README.md  pyproject.toml
backend/services/router-service/docs/: performance-analysis.md  performance-execution-plan.md  performance-optimization-changes.md  performance-testing-fixes.md
backend/services/router-service/src/router_service/: __init__.py  app.py  logging_utils.py  settings.py
backend/services/router-service/src/router_service/api/: __init__.py  app.py  dependencies.py  errors.py
backend/services/router-service/src/router_service/api/routes/: __init__.py  sessions.py  skill_runtime.py
backend/services/router-service/src/router_service/api/sse/: __init__.py  broker.py
backend/services/router-service/src/router_service/catalog/: __init__.py  csv_catalog_builder.py  file_intent_repository.py  in_memory_intent_repository.py  intent_repository.py  postgres_intent_repository.py  sql_intent_repository.py
backend/services/router-service/src/router_service/core/: __init__.py  agent_client.py  context_builder.py  domain.py  domain_router.py  graph_builder.py  graph_compiler.py  graph_domain.py  graph_orchestrator.py  graph_planner.py  graph_presentation.py  graph_runtime.py  graph_semantics.py  hierarchical_intent_recognizer.py  intent_catalog.py  intent_understanding_service.py  leaf_intent_router.py  llm_client.py  memory_store.py  orchestrator.py  prompt_templates.py  recognizer.py  recommendation_router.py  slot_extractor.py  slot_grounding.py  slot_resolution_service.py  slot_validator.py  task_queue.py  understanding_validator.py  v2_graph_builder.py  v2_graph_runtime.py  v2_graph_semantics.py  v2_orchestrator.py  v2_planner.py  v2_presentation.py  v2_recommendation_router.py
backend/services/router-service/src/router_service/core/graph/: __init__.py  action_flow.py  builder.py  compiler.py  constants.py  message_flow.py  orchestrator.py  planner.py  presentation.py  recommendation_router.py  runtime.py  semantics.py  session_store.py  state_sync.py
backend/services/router-service/src/router_service/core/prompts/: __init__.py  prompt_templates.py
backend/services/router-service/src/router_service/core/recognition/: __init__.py  domain_router.py  hierarchical_intent_recognizer.py  leaf_intent_router.py  recognizer.py  understanding_service.py
backend/services/router-service/src/router_service/core/shared/: __init__.py  diagnostics.py  domain.py  graph_domain.py
backend/services/router-service/src/router_service/core/skill_runtime/: __init__.py  markdown.py  matcher.py  models.py  prompt_builder.py  runtime.py  skill_loader.py  slot_extractor.py  tools.py
backend/services/router-service/src/router_service/core/slots/: __init__.py  extractor.py  grounding.py  resolution_service.py  understanding_validator.py  validator.py
backend/services/router-service/src/router_service/core/support/: __init__.py  agent_barrier.py  agent_client.py  context_builder.py  intent_catalog.py  json_codec.py  jwt_utils.py  llm_barrier.py  llm_client.py  memory_store.py  perf_llm_client.py  trace_logging.py
backend/services/router-service/src/router_service/models/: __init__.py  intent.py
backend/services/router-service/tests/: test_agent_barrier.py  test_llm_barrier.py
backend/services/router-v4-service/: README.md  pyproject.toml
backend/services/router-v4-service/src/router_v4_service/: __init__.py
backend/services/router-v4-service/src/router_v4_service/api/: app.py  schemas.py
backend/services/router-v4-service/src/router_v4_service/core/: agent_client.py  config.py  context.py  extractor.py  matcher.py  models.py  recognizer.py  runtime.py  skill_runtime.py  slot_projector.py  spec_registry.py  stores.py  tool_runtime.py
backend/services/router-v4-service/src/router_v4_service/default_specs/: intent.md
backend/services/router-v4-service/src/router_v4_service/default_specs/agents/: agent-registry.json  agent-registry.md
backend/services/router-v4-service/src/router_v4_service/default_specs/intents/: balance_query.intent.md  fund_query.intent.md  transfer.intent.md
backend/services/router-v4-service/src/router_v4_service/default_specs/references/: balance-intent.md  balance-routing.md  fund-intent.md  fund-routing.md  transfer-intent.md  transfer-routing.md
backend/services/router-v4-service/src/router_v4_service/default_specs/routes/: intent-routes.md
backend/services/router-v4-service/src/router_v4_service/default_specs/scenes/: balance_query.routing.json  balance_query.routing.md  balance_query.scene.md  fund_query.routing.json  fund_query.routing.md  (+4 more)
(+436 files in other folders)
