[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-router"
version = "0.1.0"
description = "Intent router MVP with serial task orchestration and SSE updates"
readme = "AGENTS.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "langchain>=1.2,<2.0",
  "langchain-core>=1.2,<2.0",
  "langchain-openai>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = [
  "backend/contracts/intent-registry/src",
  "backend/services/admin-service/src",
  "backend/services/router-service/src",
  "backend/services/agents/account-balance-agent/src",
  "backend/services/agents/transfer-money-agent/src",
  "backend/services/agents/credit-card-repayment-agent/src",
  "backend/services/agents/gas-bill-agent/src",
  "backend/services/agents/forex-agent/src",
  "backend/services/agents/fallback-agent/src",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
