[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-router"
version = "0.1.0"
description = "Repository-level regression workspace for intent-router"
readme = "AGENTS.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
