[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-registry-contracts"
version = "0.1.0"
description = "Shared intent registry contracts for admin-service and router-service"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
