[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-admin-service"
version = "0.1.0"
description = "Admin API for intent registration and activation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "intent-registry-contracts>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
