[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-fake-llm-service"
version = "0.1.0"
description = "OpenAI-compatible fake LLM service for local and perf testing"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "orjson>=3.10,<4.0",
  "pydantic>=2.8,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
