[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-router-service"
version = "0.1.0"
description = "Router API for intent recognition, orchestration, and dispatch"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "orjson>=3.10,<4.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "PyJWT>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "openai==2.30.0",
  "langchain-core==1.2.26",
  "langchain-openai==1.1.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"router_service.core.skill_runtime" = [
  "default_specs/*.md",
  "default_specs/skills/*.md",
  "default_specs/skills/references/*.md",
]
