[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-router-v4-service"
version = "0.1.0"
description = "Standalone v4 spec-driven intent router service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "orjson>=3.10,<4.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"router_v4_service" = [
  "default_specs/intent.md",
  "default_specs/agents/*.md",
  "default_specs/skills/*.md",
]
